# gptperso

./: README.md  agent.ipynb  cluster.yaml  compose.yaml  llama_agent.ipynb  pyproject.toml  smolagents.ipynb
backend/: Dockerfile  app.py  credentials.py  requirements.txt  tavily_secret.txt
backend/src/: llm_agent.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  Input_User.js
