[project]
name = "llm-app"
version = "0.1.0"
description = "A project intending to deploy agents on React.js"
authors = [
    {name = "Serge BEN YAMIN"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.9,<3.13.3"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "llama-index (>=0.12.25,<0.13.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "llama-index-llms-huggingface (>=0.4.2,<0.5.0)",
    "llama-index-core (>=0.12.27,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

